--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ facebook_id: # your facebook id
 discord_id: # your discord id (18-digit unique numerical identifier)
 
 contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+  The best way to reach me is to send an email to aumrawal[at]umbc[dot]edu.
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
